--- a/index.html
+++ b/index.html
@@ -49,34 +49,34 @@
     <div class="carrosel-filmes">
         <div class="owl-carousel owl-theme">
             <div class="item">
-                <img class="box-filme" src="img/mini11.jpg" alt="" srcset="">
+               <a href="https://www.youtube.com/watch?v=nv0QEwlGyWM" target="_blank"> <img class="box-filme" src="img/mini11.jpg" alt="" srcset=""></a>
             </div>
             <div class="item">
-                <img class="box-filme" src="img/mini16.jpg" alt="" srcset="">
+               <a href="https://www.youtube.com/watch?v=ClfwVUhzLGo&t=67s" target="_blank"><img class="box-filme" src="img/mini16.jpg" alt="" srcset=""> </a>
             </div>
             <div class="item">
-                <img class="box-filme" src="img/mini2.jpg" alt="" srcset="">
+               <a href="https://www.youtube.com/watch?v=dMi3oiQCsKQ" target="_blank"> <img class="box-filme" src="img/mini2.jpg" alt="" srcset=""></a>
             </div>
             <div class="item">
-                <img class="box-filme" src="img/mini3.jpg" alt="" srcset="">
+               <a href="https://www.youtube.com/watch?v=3od-kQMTZ9M" target="_blank"> <img class="box-filme" src="img/mini3.jpg" alt="" srcset=""></a>
             </div>
             <div class="item">
-                <img class="box-filme" src="img/mini4.jpg" alt="" srcset="">
+               <a href="https://www.youtube.com/watch?v=xXEwp0uQmjM" target="_blank"> <img class="box-filme" src="img/mini4.jpg" alt="" srcset=""></a>
             </div>
             <div class="item">
-                <img class="box-filme" src="img/mini5.jpg" alt="" srcset="">
+               <a href="https://www.youtube.com/watch?v=wIb-zmxQDkg" target="_blank"> <img class="box-filme" src="img/mini5.jpg" alt="" srcset=""> </a>
             </div>
             <div class="item">
-                <img class="box-filme" src="img/mini6.jpg" alt="" srcset="">
+               <a href="https://www.youtube.com/watch?v=mHc7z-Ks6dg" target="_blank"> <img class="box-filme" src="img/mini6.jpg" alt="" srcset=""> </a>
             </div>
             <div class="item">
-                <img class="box-filme" src="img/mini7.jpg" alt="" srcset="">
+               <a href="https://www.youtube.com/watch?v=Y9QbQI7mX5o" target="_blank"> <img class="box-filme" src="img/mini7.jpg" alt="" srcset=""> </a>
             </div>
             <div class="item">
-                <img class="box-filme" src="img/mini8.jpg" alt="" srcset="">
+               <a href="https://www.youtube.com/watch?v=4O0JiI6CTRI" target="_blank"> <img class="box-filme" src="img/mini8.jpg" alt="" srcset=""></a>
             </div>
             <div class="item">
-                <img class="box-filme" src="img/mini0.jpg" alt="" srcset="">
+               <a href="https://www.youtube.com/watch?v=-XOuu1vd_fk" target="_blank"> <img class="box-filme" src="img/mini0.jpg" alt="" srcset=""></a>
             </div>
         </div>
     </div>
